Add: missing resources.

--- a/application/src/main/res/layout-land/activity_tv_show_details.xml
+++ b/application/src/main/res/layout-land/activity_tv_show_details.xml
@@ -32,16 +32,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
 
-    <ImageView
-        android:id="@+id/image_view_tv_show_details_ic_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/all_ic_share_description"
-        android:padding="@dimen/padding_big"
-        android:src="@drawable/all_ic_share"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_tv_show_details_ic_back_arrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_back_arrow" />
+    <!--<ImageView-->
+    <!--android:id="@+id/image_view_tv_show_details_ic_share"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:contentDescription="@string/all_ic_share_description"-->
+    <!--android:padding="@dimen/padding_big"-->
+    <!--android:src="@drawable/all_ic_share"-->
+    <!--app:layout_constraintBottom_toBottomOf="@id/image_view_tv_show_details_ic_back_arrow"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_back_arrow" />-->
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_diagonal_top"
@@ -248,15 +248,6 @@
         app:layout_constraintEnd_toEndOf="@id/image_view_tv_show_details_ic_back_arrow"
         app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_back_arrow"
         app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_back_arrow" />
-
-    <View
-        android:id="@+id/dummy_view_tv_show_details_share"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_tv_show_details_ic_share"
-        app:layout_constraintEnd_toEndOf="@id/image_view_tv_show_details_ic_share"
-        app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_share"
-        app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_share" />
 
     <Space
         android:id="@+id/space_runtime_alerter"
