--- a/application/src/main/res/drawable/item_recycler_view_decoration.xml
+++ b/application/src/main/res/drawable/item_recycler_view_decoration.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <size android:height="4dp"/>
-    <solid android:color="@color/primary"/>
+    <size android:height="1dp" />
+    <solid android:color="@color/item_top_list_background" />
 </shape>
