--- a/application/src/main/res/layout/activity_search.xml
+++ b/application/src/main/res/layout/activity_search.xml
@@ -1,47 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/constraint_layout_search"
-    android:background="@color/primary">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_activity_all"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraint_layout_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/primary">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_activity_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar_activity_all"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/EpisodieTheme.Toolbar"
+                    app:contentInsetStartWithNavigation="@dimen/inset_start_with_navigation_toolbar">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="@string/toolbar_title_search"
+                        android:textSize="@dimen/text_size_toolbar_title_search" />
+
+                </android.support.v7.widget.Toolbar>
+
+                <com.miguelcatalan.materialsearchview.MaterialSearchView
+                    android:id="@+id/search_activity_search_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/all_search_view_hint"
+                    android:textColor="@color/primary" />
+
+            </FrameLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/search_suggestions_recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/app_bar_activity_search" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <pl.hypeapp.episodie.ui.widget.RuntimeAlerterView
+        android:id="@+id/alerter_search_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/EpisodieTheme.Toolbar"
-        app:contentInsetStartWithNavigation="@dimen/inset_start_with_navigation_toolbar">
+        android:layout_marginTop="-40dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="@string/toolbar_title_search"
-            android:textSize="@dimen/text_size_toolbar_title_search"/>
-
-    </android.support.v7.widget.Toolbar>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/search_suggestions_recycler_view"
-        android:paddingStart="@dimen/padding_default"
-        android:paddingEnd="@dimen/padding_default"
-        android:paddingTop="@dimen/padding_default"
-        android:clipToPadding="false"
-        android:paddingBottom="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_activity_all"/>
-
-    <com.miguelcatalan.materialsearchview.MaterialSearchView
-        android:id="@+id/search_activity_search_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/all_search_view_hint"
-        android:textColor="@color/primary"/>
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
