--- a/application/src/main/res/layout/activity_tv_show_details.xml
+++ b/application/src/main/res/layout/activity_tv_show_details.xml
@@ -32,17 +32,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.05" />
 
-    <ImageView
-        android:id="@+id/image_view_tv_show_details_ic_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/all_ic_share_description"
-        android:padding="@dimen/padding_big"
-        android:src="@drawable/all_ic_share"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_tv_show_details_ic_back_arrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_back_arrow" />
-
     <android.support.constraint.Guideline
         android:id="@+id/guideline_diagonal_top"
         android:layout_width="wrap_content"
@@ -135,13 +124,14 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/margin_default"
+                        android:layout_marginEnd="@dimen/margin_default"
                         android:ellipsize="end"
                         android:includeFontPadding="false"
                         android:maxLines="2"
                         android:textSize="@dimen/text_size_tv_show_details_title"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/card_view_tv_show_details_cover"
                         app:layout_constraintEnd_toEndOf="@id/top_corner_shape_tv_show_details"
+                        app:layout_constraintStart_toEndOf="@id/card_view_tv_show_details_cover"
                         app:layout_constraintTop_toBottomOf="@id/card_view_tv_show_details_full_runtime"
                         app:layout_constraintVertical_bias="0.2" />
 
@@ -247,27 +237,18 @@
         app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_back_arrow"
         app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_back_arrow" />
 
-    <View
-        android:id="@+id/dummy_view_tv_show_details_share"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_tv_show_details_ic_share"
-        app:layout_constraintEnd_toEndOf="@id/image_view_tv_show_details_ic_share"
-        app:layout_constraintStart_toStartOf="@id/image_view_tv_show_details_ic_share"
-        app:layout_constraintTop_toTopOf="@id/image_view_tv_show_details_ic_share" />
-
     <Space
         android:id="@+id/space_runtime_alerter"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <pl.hypeapp.episodie.ui.widget.RuntimeAlerterView
-        app:layout_constraintBottom_toBottomOf="@id/space_runtime_alerter"
         android:id="@+id/runtime_alerter_tv_show_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-40dp" />
+        android:layout_marginBottom="-40dp"
+        app:layout_constraintBottom_toBottomOf="@id/space_runtime_alerter" />
 
 </android.support.constraint.ConstraintLayout>
