--- a/application/src/main/res/layout/item_most_popular.xml
+++ b/application/src/main/res/layout/item_most_popular.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/la_mp"
+    android:id="@+id/parent_most_popular"
     android:layout_height="wrap_content">
 
     <ImageView
