--- a/application/src/main/res/layout/layout_your_library_empty.xml
+++ b/application/src/main/res/layout/layout_your_library_empty.xml
@@ -31,6 +31,7 @@
 
         <Button
             android:id="@+id/button_layout_empty_message_feed"
+            style="@style/Base.Widget.AppCompat.ButtonBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_big"
