--- a/application/src/main/res/layout/noise_view_background.xml
+++ b/application/src/main/res/layout/noise_view_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <pl.hypeapp.noiseview.NoiseView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/background_tv_show_details"
+    android:id="@+id/noise_view"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:scaleType="centerCrop"
