--- a/application/src/main/res/layout/activity_season_tracker.xml
+++ b/application/src/main/res/layout/activity_season_tracker.xml
@@ -131,7 +131,7 @@
             app:fab_colorNormal="@android:color/white"
             app:fab_colorPressed="@android:color/white"
             app:fab_icon="@drawable/all_ic_notifications_on"
-            app:fab_title=""
+            app:fab_title="@string/fab_button_notifications_on"
             app:fab_size="mini"/>
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
