--- a/application/src/main/res/layout/image_view_background_tv_show_details.xml
+++ b/application/src/main/res/layout/image_view_background_tv_show_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView android:id="@+id/background_tv_show_details"
+<ImageView android:id="@+id/noise_view"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:scaleType="centerCrop"
