--- a/application/src/main/res/layout/item_premiere.xml
+++ b/application/src/main/res/layout/item_premiere.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<pl.hypeapp.materialtimelineview.MaterialTimelineView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<pl.hypeapp.materialtimelineview.MaterialTimelineView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/timeline_view_item_premiere"
     android:layout_width="match_parent"
@@ -19,7 +18,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.andexert.library.RippleView
+        android:id="@+id/ripple_view_item_premiere"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        app:rv_rippleDuration="150"
+        app:rv_alpha="30"
+        app:rv_color="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_item_premiere_cover"
@@ -40,7 +52,7 @@
             android:layout_width="@dimen/width_tv_show_details_cover"
             android:layout_height="@dimen/height_tv_show_details_cover"
             android:contentDescription="@string/tv_show_details_cover_description"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY" />
 
     </android.support.v7.widget.CardView>
 
@@ -67,7 +79,7 @@
             android:drawablePadding="@dimen/padding_small"
             android:drawableStart="@drawable/bottom_navigation_ic_premieres"
             android:gravity="center_horizontal|center_vertical"
-            android:textSize="@dimen/text_size_tv_show_details_full_runtime"/>
+            android:textSize="@dimen/text_size_tv_show_details_full_runtime" />
 
     </android.support.v7.widget.CardView>
 
@@ -90,34 +102,34 @@
         android:id="@+id/text_view_item_premiere_status"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_big"
         android:layout_marginEnd="@dimen/margin_big"
-        android:textColor="@android:color/darker_gray"
+        android:layout_marginStart="@dimen/margin_big"
         android:layout_marginTop="@dimen/margin_default"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintStart_toEndOf="@id/card_view_item_premiere_cover"
-        app:layout_constraintTop_toBottomOf="@id/text_view_item_premiere_title"/>
+        app:layout_constraintTop_toBottomOf="@id/text_view_item_premiere_title" />
 
     <TextView
         android:id="@+id/text_view_item_premiere_genre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_big"
         android:layout_marginEnd="@dimen/margin_big"
+        android:layout_marginStart="@dimen/margin_big"
         android:textColor="@android:color/darker_gray"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card_view_item_premiere_cover"
-        app:layout_constraintTop_toBottomOf="@id/text_view_item_premiere_status"/>
+        app:layout_constraintTop_toBottomOf="@id/text_view_item_premiere_status" />
 
     <TextView
         android:id="@+id/text_view_days_to_go"
         android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="@id/card_view_item_premiere_cover"
-        app:layout_constraintEnd_toEndOf="@id/card_view_item_premiere_cover"
-        app:layout_constraintBottom_toBottomOf="@id/card_view_item_premiere_cover"
-        android:padding="@dimen/padding_small"
+        android:layout_height="wrap_content"
         android:background="@color/gradient"
-        android:layout_height="wrap_content" />
+        android:padding="@dimen/padding_small"
+        app:layout_constraintBottom_toBottomOf="@id/card_view_item_premiere_cover"
+        app:layout_constraintEnd_toEndOf="@id/card_view_item_premiere_cover"
+        app:layout_constraintStart_toStartOf="@id/card_view_item_premiere_cover" />
 
     <ImageView
         android:id="@+id/image_view_item_premiere_notification_icon"
@@ -127,6 +139,6 @@
         android:layout_marginEnd="@dimen/margin_default"
         android:src="@drawable/all_ic_notifications_on"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </pl.hypeapp.materialtimelineview.MaterialTimelineView>
