--- a/application/src/main/res/layout-land/activity_your_library.xml
+++ b/application/src/main/res/layout-land/activity_your_library.xml
@@ -1,135 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/parent_layout_your_library"
-    android:layout_height="match_parent"
-    android:background="@color/accent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/image_view_your_library_background"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:contentDescription="@string/image_view_your_library_background_description"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/accent">
 
-    <pl.hypeapp.episodie.ui.widget.WatchedShowView
-        android:id="@+id/view_watched_show_your_library"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/baseline"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <ImageView
+            android:id="@+id/image_view_your_library_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image_view_your_library_background_description" />
 
-    <Space
-        android:id="@+id/baseline"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.65"/>
+        <pl.hypeapp.episodie.ui.widget.WatchedShowView
+            android:id="@+id/view_watched_show_your_library"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/baseline"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.flaviofaria.kenburnsview.KenBurnsView
-        android:id="@+id/kenburns_view_show_frame"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:alpha="0.07"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_watched_show_your_library"/>
+        <Space
+            android:id="@+id/baseline"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.65" />
 
-    <TextView
-        android:id="@+id/text_view_your_library_watched_shows"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_all_icons"
-        android:layout_marginBottom="@dimen/margin_bottom_your_library_diamond_icon_land"
-        android:layout_marginEnd="@dimen/margin_medium"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:drawablePadding="@dimen/padding_default"
-        android:drawableStart="@drawable/all_ic_diamond_checked"
-        android:gravity="center"
-        android:paddingBottom="@dimen/padding_bottom_your_library_diamond_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/text_view_your_library_watched_seasons"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_all_icons"
-        android:layout_marginBottom="@dimen/margin_medium"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:drawablePadding="@dimen/padding_default"
-        android:drawableStart="@drawable/all_ic_watched_seasons"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/text_view_your_library_watched_shows"/>
-
-    <TextView
-        android:id="@+id/text_view_your_library_watched_episodes"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/height_all_icons"
-        android:layout_marginBottom="@dimen/margin_medium"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:drawablePadding="@dimen/padding_default"
-        android:drawableStart="@drawable/all_ic_watched_episodes"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/text_view_your_library_watched_seasons"/>
-
-    <TextView
-        android:id="@+id/text_view_your_library_watching_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_medium"
-        android:layout_marginEnd="@dimen/margin_medium"
-        android:drawablePadding="@dimen/padding_default"
-        android:drawableStart="@drawable/all_ic_watching_time"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <com.yarolegovich.discretescrollview.DiscreteScrollView
-        android:id="@+id/watched_show_your_library_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:minHeight="110dp"
-        app:layout_constraintBottom_toBottomOf="@id/baseline"
-        app:layout_constraintTop_toTopOf="@id/baseline"/>
-
-    <ViewStub
-        android:id="@+id/stub_your_library_error_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout="@layout/item_error"
-        android:layout_marginTop="@dimen/margin_big"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_activity_all"/>
-
-    <ViewStub
-        android:id="@+id/stub_your_library_empty_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_big"
-        android:layout="@layout/layout_your_library_empty"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_activity_all"/>
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_activity_all"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/EpisodieTheme.Toolbar.Transparent"
-        app:contentInsetStartWithNavigation="@dimen/inset_start_with_navigation_toolbar">
+        <com.flaviofaria.kenburnsview.KenBurnsView
+            android:id="@+id/kenburns_view_show_frame"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:alpha="0.07"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view_watched_show_your_library" />
 
         <TextView
+            android:id="@+id/text_view_your_library_watched_shows"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="@string/your_library_title"
-            android:textSize="@dimen/text_size_time_calculator_toolbar_title"/>
+            android:layout_height="@dimen/height_all_icons"
+            android:layout_marginBottom="@dimen/margin_bottom_your_library_diamond_icon_land"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:drawablePadding="@dimen/padding_default"
+            android:drawableStart="@drawable/all_ic_diamond_checked"
+            android:gravity="center"
+            android:paddingBottom="@dimen/padding_bottom_your_library_diamond_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </android.support.v7.widget.Toolbar>
+        <TextView
+            android:id="@+id/text_view_your_library_watched_seasons"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/height_all_icons"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:drawablePadding="@dimen/padding_default"
+            android:drawableStart="@drawable/all_ic_watched_seasons"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_view_your_library_watched_shows" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/text_view_your_library_watched_episodes"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/height_all_icons"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:drawablePadding="@dimen/padding_default"
+            android:drawableStart="@drawable/all_ic_watched_episodes"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_view_your_library_watched_seasons" />
+
+        <TextView
+            android:id="@+id/text_view_your_library_watching_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:drawablePadding="@dimen/padding_default"
+            android:drawableStart="@drawable/all_ic_watching_time"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <com.yarolegovich.discretescrollview.DiscreteScrollView
+            android:id="@+id/watched_show_your_library_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:minHeight="110dp"
+            app:layout_constraintBottom_toBottomOf="@id/baseline"
+            app:layout_constraintTop_toTopOf="@id/baseline" />
+
+        <ViewStub
+            android:id="@+id/stub_your_library_error_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_big"
+            android:layout="@layout/item_error"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_activity_all" />
+
+        <ViewStub
+            android:id="@+id/stub_your_library_empty_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_big"
+            android:layout="@layout/layout_your_library_empty"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_activity_all" />
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_activity_all"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/EpisodieTheme.Toolbar.Transparent"
+            app:contentInsetStartWithNavigation="@dimen/inset_start_with_navigation_toolbar">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="@string/your_library_title"
+                android:textSize="@dimen/text_size_time_calculator_toolbar_title" />
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <pl.hypeapp.episodie.ui.widget.RuntimeAlerterView
+        android:id="@+id/alerter_your_library"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-40dp" />
+
+</FrameLayout>
